--- a/notebooks/1-random-numbers.Rmd
+++ b/notebooks/1-random-numbers.Rmd
@@ -23,11 +23,17 @@ Path to Anaconda with Python 3.7.1
 
 Difference between modules https://stackoverflow.com/questions/4001577/difference-between-random-draws-from-scipy-stats-rvs-and-numpy-random
 
+We use the following packages
+
+- numpy -- http://www.numpy.org/
+- scipy -- https://www.scipy.org/
+- pandas -- http://pandas.pydata.org/
+
 ```{python, engine.path = "~/anaconda3/bin/python"}
-import numpy as np 
-import scipy as sp
+import numpy as np ## numerical 
+import scipy as sp ## scientific 
 import scipy.stats as stats
-import pandas as pa
+import pandas as pa ## data processing
 n = 10000
 lam = 0.5
 
