--- a/excercises/discrete.Rmd
+++ b/excercises/discrete.Rmd
@@ -18,6 +18,7 @@ równe liczbie celnych rzutów.
 + Oblicz prawdopodobieństwo, że koszykarz trafi dokładnie 6 razy za 3 punkty.
 + Oblicz prawdopodobieństwo, że koszykarz odda co najwyżej 3 celne rzuty za 3 punkty.
 
+### Solutions -- R
 
 ```{r}
 p <- 0.4
@@ -31,6 +32,8 @@ dbinom(x = 6, n, p)
 ## pt 4
 pbinom(3,n,p)
 ```
+
+### Solutions -- python
 
 ```{python, engine.path = "~/anaconda3/bin/python"}
 import numpy as np 
@@ -51,6 +54,8 @@ d = stats.binom.cdf(k = 3, n=n, p=p)
 print(d)
 
 ```
+
+### Solutions -- Julia
 
 ```{julia, engine.path = "/Applications/Julia-1.0.app/Contents/Resources/julia/bin/julia"}
 using Distributions ## for distributions
